--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1{
   font-weight: 500;
 }
 
-p{
+h5{
   font-size: 13px;
   font-weight: 400;
 }
@@ -208,8 +208,80 @@ p{
 }
 }
 
+.informacoes-e-aside{
+  display: flex;
+  justify-content: space-between;
 
+  *{
+    border: 1px solid blue;
+  }
+}
 
+.reserva-noites{
+  border: 1px solid #dddddd;
+  border-radius: 0.7rem;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);;
+  width: 383px;
+  height: 318px;
+  position: sticky;
+  top: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  
+  .reserva-selecao-dias{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 332px;
+    height: 116px;
 
+    .inputs{
+      border: 1px solid black;
+    }
 
+    :nth-child(2){
+      width: 165px;
+      input{
+        width: 100%;
+      }
+    }
+    :nth-child(3){
+      grid-column: 1/3;
+      overflow: hidden;
+      width: 332px;
+    }
+  }
+
+  .reserva-confirmar{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1rem;
+    gap: 20px;
+    a{
+      display: inline-block;
+      background-color: #ff385c;
+      border-radius: 50rem;
+      text-align: center; 
+      line-height: 50px;
+      height: 50px;
+      width: 332px;
+    }
+  }
+
+  .valor-diaria{
+    display: flex;
+    margin-bottom: 20px;
+    width: 332px;
+    align-items: center;
+    gap: 0.3125rem;
+  }
+
+  .inputs{
+    display: flex;
+    flex-direction: column;
+  }
+}
 
