termino do aside e conversao px em rem

--- a/global.css
+++ b/global.css
@@ -29,9 +29,13 @@ body {
   height: 100rem;
 }
 
-input, select {
+input, input::placeholder, select {
   border: none;
   outline: none;
+  appearance: none;
+  color: #000000;
+  font-size: 12px;
+  width: 100px;
 }
 
 a {
