--- a/style.css
+++ b/style.css
@@ -390,3 +390,53 @@
     margin: 3.375rem 0 3.375rem 0;
   }
 }
+.comentario h1{
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
+}
+.comentario h2{
+  color: #6A6A6A;
+}
+
+.comentarios-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  width: 100%;
+  justify-items: start;
+}
+.comentario-card{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  margin: 1.5rem 0 1.5rem 0;
+  
+}
+.comentario-header{
+  display: flex;
+  align-items: center;
+  text-align: left;
+  gap: 0.8rem;
+  img{
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+  }
+}
+
+.comentario-avaliacao{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  justify-content: flex-start;
+
+  
+}
+.comentarios-texto{
+  margin-top: 0.5rem;
+}
+.mostrar-mais{
+  margin-top: 0.5rem;
+  cursor: pointer;
+}
