--- a/style.css
+++ b/style.css
@@ -437,6 +437,7 @@
 }
 .mostrar-mais{
   margin-top: 2rem;
+  margin-bottom: 2rem;
   cursor: pointer;
 }
 .info-hospedagem h2{
@@ -454,4 +455,15 @@
 }
 .info-card h4, .info-card h5{
   margin-bottom: 0.5rem;
+}
+.footer{
+  background-color: #f2f2f2;  
+  width: 100%;
+  
+}
+.footer > .container{
+    margin-top: 1.5rem;
+}
+.footer > .info-hospedagem-grid{
+    margin-top: 3rem;
 }
