--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
   margin: 0 auto;
 }
 
-
-
 .divorizontal{
   border-bottom: 1px solid #dddddd;
   width: 100%;
@@ -444,26 +442,27 @@
   margin: 3rem 0 1.5rem;
 }
 .info-hospedagem-grid{
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   margin: 0 auto;
   gap: 2rem;
   justify-content: center;
   max-width: 75rem;
 }
-.info-card{
-  flex: 1;
-}
+
 .info-card h4, .info-card h5{
   margin-bottom: 0.5rem;
 }
+
 .footer{
   background-color: #f2f2f2;  
   width: 100%;
-  
 }
 .footer > .container{
-    margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 .footer > .info-hospedagem-grid{
-    margin-top: 3rem;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-around;
 }
